@@ -94,6 +94,8 @@
 #define CMDIF_IP_HELPER_ERROR() PRINTERROR("Syntax error !\nCorrect syntax is:\n   (no) ip helper-address A.B.C.D\n");
 #define CMDIF_MACADDR_ERROR() PRINTERROR("Syntax error !\nCorrect syntax is:\n   (no) mac-address <xx:xx:xx:xx:xx:xx|random>\n");
 #define CMDIF_SPEED_ERROR() PRINTERROR("Syntax error !\nCorrect syntax is:\n   (no) speed <speed>\n");
+#define CMDIF_DUPLEX_ERROR() PRINTERROR("Syntax error !\nCorrect syntax is:\n   (no) duplex <duplex-mode>\n");
+
 
 // Firewall Messages
 #define CMDFW_DISABLE_ERROR() PRINTERROR("Syntax error !\nCorrect syntax is:\n   disable\n");
